--- a/src/style/Day.css
+++ b/src/style/Day.css
@@ -79,6 +79,12 @@ RESPONSIVE
 /* IPHONE */
 @media only screen and ( max-width: 500px) {
   .day, .notADay {
+    height: 80px;
+  }
+}
+
+@media only screen and (max-width: 500px) and (max-height: 700px){
+  .day, .notADay {
     height: 60px;
   }
 }
